--- a/api/build.gradle
+++ b/api/build.gradle
@@ -33,6 +33,10 @@ dependencies {
     //swagger
     implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.5.0'
 
+    //security
+//    implementation 'org.springframework.boot:spring-boot-starter-security'
+
+
 }
 
 test {
