--- a/api/src/main/resources/application.yaml
+++ b/api/src/main/resources/application.yaml
@@ -2,7 +2,10 @@ spring:
   threads:
     virtual:
       enabled: true
-
+  servlet:
+    multipart:
+      max-file-size: 50MB
+      max-request-size: 50MB
   jpa:
     show-sql: true
     properties:
