--- a/api/src/main/resources/application.yaml
+++ b/api/src/main/resources/application.yaml
@@ -35,6 +35,9 @@ encrypt:
 #  naverAccessKey: ncp_iam_BPAMKR3jRhvJP2DGrP9M
 #  naverSMSApi: ncp:sms:kr:337692680951:animonster
 #
+file:
+  path: /Users/sanghyukmoon/AniMonster/aniMonster_img
+
 
 jwt:
   secret:
