add encrypt switch

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
-**/application.yaml
+api/src/main/resources/application.yaml
 ### IntelliJ IDEA ###
 .idea/modules.xml
 .idea/jarRepositories.xml
