--- a/api/src/main/resources/application.yaml
+++ b/api/src/main/resources/application.yaml
@@ -30,7 +30,7 @@ encrypt:
   algorithm: aes
   secretKey: AniMonsterBemine
   iv: BmineAniMonster
-
+  activate: false
 #  naverSecretKey: ncp_iam_BPKMKRC8my9RwXz8x4XpJkDqRl0ramzmzf
 #  naverAccessKey: ncp_iam_BPAMKR3jRhvJP2DGrP9M
 #  naverSMSApi: ncp:sms:kr:337692680951:animonster
